# petrel

./: .gitignore  CHANGELOG.md  README.md  SIGUIENTE.md  pyproject.toml
docs/: cfp-ekoparty-2026.md
petrel/: __init__.py  cli.py  models.py
petrel/discovery/: censys.py  fofa.py  github.py  npm.py  passive.py  platform.py  pypi.py  registries.py  shodan.py  smithery.py
petrel/fingerprint/: probe.py
petrel/output/: __init__.py  cobaltohq.py  csv.py  html.py  markdown.py  sarif.py
petrel/scoring/: risk.py
scripts/: latam_stats.py
tests/: test_censys.py  test_cli.py  test_fingerprint.py  test_fofa.py  test_github.py  test_models.py  test_npm.py  test_passive.py  test_pypi.py  test_scoring.py  test_smithery.py
