[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobaltosec-petrel"
version = "0.6.0"
description = "MCP Internet Scanner & Fingerprinter — find exposed MCP servers before attackers do"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "security", "scanner", "fingerprinting", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.5",
    "rich>=13",
    "anyio>=4",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
petrel = "petrel.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["petrel*"]

[tool.setuptools.package-data]
"petrel" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
